# cmake-strings-processing-lib

./: .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt  split_strings.cpp  trim_strings.cpp
no_strings_attached/: CMakeLists.txt  string_split.cpp  string_split.h  string_split_test.cpp  string_trim.cpp  string_trim.h  string_trim_test.cpp
